# auth-library

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs
src/models/: auth-model.rs  auth_model.rs
src/services/: auth-service.rs  auth_service.rs
tests/: auth_service_tests.rs
