cargo-features = ["edition2024"]

[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "dale-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "2"
jsonwebtoken = "7"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]
default-features = false