cargo-features = ["edition2024"]

[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "dale_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "2"
jsonwebtoken = "7"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bson = { version = "2.10.0", features = ["chrono-0_4"] }

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]
default-features = false